--- a/index.html
+++ b/index.html
@@ -16,17 +16,9 @@
     <div class="wrapper">
       <header>
         <h1>Solarsystem</h1>
-        <p>A model of the current Solar System created with Three.js and custom shaders </p>
+        <p>A model of the current Solar System created with Three.js and custom shaders. </p>
 
         <p class="view"><a href="https://github.com/devgabrielcoman/SolarSystem">View the Project on GitHub 
-        <!-- <small>devgabrielcoman/SolarSystem</small> --></a></p>
-
-
-       <!--  <ul>
-          <li><a href="https://github.com/devgabrielcoman/SolarSystem/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/devgabrielcoman/SolarSystem/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/devgabrielcoman/SolarSystem">View On <strong>GitHub</strong></a></li>
-        </ul> -->
       </header>
       <section>
         <h3>
