--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Solar System</h1>
         <p>A model of the current Solar System created with Three.js and custom shaders. </p>
 
-        <p class="view"><a href="https://github.com/devgabrielcoman/SolarSystem">View the Project on GitHub 
+        <p class="view"><a href="https://github.com/devgabrielcoman/SolarSystem">View the Project on GitHub</a> 
       </header>
       <section>
         <p>
