--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
       </header>
       <section>
         <p>
-          This is a rather small demo I created of a simplified solar system (Sun + eight planets)
+          This is a rather small demo I created of a simplified solar system, consisting of the sun and
+          eight surrounding planets.
+        </p>
+        <p>
+          <img src="resources/img_1.jpg"/>
         </p>
         <!-- <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3> -->
@@ -54,8 +58,8 @@ $ git checkout gh-pages
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section> -->
+<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p> -->
+      </section>
 
 
       <footer>
