--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
           eight surrounding planets.
         </p>
         <p>
+          <a href="examples/solarsystem.html">View the live example here</a>
+        </p>
+        <p>
           <img src="resources/img_1.jpg"/>
+        </p>
+        <p>
+          What really pleased me is that Three.js managed all the scene complexity for me: adding and assigning VBOs, IBOs, buffers, etc, was hidden behind an elegant system of scene, camera, geometry and material management.<br>
+          Which fitted me perfectly, because for I long time I wanted to explore shaders indepth, but without the hassle of setting up the traditional OpenGL or WebGL environment. 
         </p>
         <!-- <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3> -->
