--- a/index.html
+++ b/index.html
@@ -21,19 +21,30 @@
         <p class="view"><a href="https://github.com/devgabrielcoman/SolarSystem">View the Project on GitHub</a> 
       </header>
       <section>
+        <h3>
+          The basics
+        </h3>
         <p>
-          This is a rather small demo I created of a simplified solar system, consisting of the sun and
+          This is a rather small demo I created of a simplified solar system, consisting of the Sun and
           eight surrounding planets.
         </p>
         <p>
-          <a href="examples/solarsystem.html">View the live example here</a>
+          <a href="example/solarsystem.html">View the live example here</a>
         </p>
         <p>
           <img src="resources/img_1.jpg"/>
         </p>
         <p>
-          What really pleased me is that Three.js managed all the scene complexity for me: adding and assigning VBOs, IBOs, buffers, etc, was hidden behind an elegant system of scene, camera, geometry and material management.<br>
-          Which fitted me perfectly, because for I long time I wanted to explore shaders indepth, but without the hassle of setting up the traditional OpenGL or WebGL environment. 
+          What really pleased me is that Three.js managed all the scene complexity for me: adding and assigning VBOs, IBOs, buffers, etc, was hidden behind an elegant system of scene, camera, geometry and material management.
+        </p>
+        <p>
+          Which fitted me perfectly, because for I long time I wanted to explore shaders in depth, but without the hassle of setting up the traditional OpenGL or WebGL environment. 
+        </p>
+        <h3>
+          Shaders
+        </h3>
+        <p>
+          For this example I created two shader pairs (vertex and fragment). 
         </p>
         <!-- <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3> -->
