--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </header>
       <section>
         <h3>
-          The basics
+          About
         </h3>
         <p>
           This is a rather small demo I created of a simplified solar system, consisting of the Sun and
@@ -41,7 +41,7 @@
           Which fitted me perfectly, because for I long time I wanted to explore shaders in depth, but without the hassle of setting up the traditional OpenGL or WebGL environment. 
         </p>
         <h3>
-          Shaders
+          More info
         </h3>
         <p>
           For this example I created two custom shader pairs (vertex and fragment), besides the one thas
